# voxel_story

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
camera/: Cargo.toml
camera/src/: cursor_ray.rs  lib.rs  rts.rs  setup.rs  spectator.rs  switching.rs
debug_ui/: Cargo.toml
debug_ui/src/: lib.rs  metrics.rs  plugin.rs
rts_camera/: Cargo.toml
rts_camera/src/: lib.rs  plugin.rs
spectator/: Cargo.toml
spectator/src/: lib.rs  plugin.rs
src/: camera.rs  diagnostics.rs  editing.rs  main.rs  world_setup.rs
ui/: Cargo.toml
ui/src/: diagnostics.rs  lib.rs
ui/src/debug/: collect.rs  mod.rs  panel.rs
voxel_core/: Cargo.toml
voxel_core/src/: chunk.rs  coords.rs  lib.rs  voxel.rs  world.rs
voxel_core/src/generation/: castle_story.rs  islands.rs  mod.rs
voxel_engine/: Cargo.toml
voxel_engine/src/: chunk.rs  config.rs  coords.rs  debug.rs  lib.rs  plugin.rs  resources.rs  voxel.rs  world.rs
voxel_engine/src/generation/: flat.rs  heightmap.rs  island.rs  mod.rs
voxel_engine/src/rendering/: mod.rs
voxel_render/: Cargo.toml
voxel_render/src/: components.rs  debug.rs  lib.rs  meshing.rs  plugin.rs  region.rs  resources.rs  tasks.rs
voxel_story/: Cargo.toml
voxel_story/src/: main.rs
world_api/: Cargo.toml
world_api/src/: components.rs  debug.rs  events.rs  lib.rs  world.rs
