[workspace]
members = ["world_api", "camera", "voxel_story", "ui", "voxel_core", "voxel_engine", "voxel_render"]
resolver = "2"
 
[workspace.dependencies]
bevy = "0.18.1"
bevy_egui = "0.39.1"
world_api = { path = "./world_api" }
camera    = { path = "./camera" }
ui        = { path = "./ui" }
voxel_core = { path = "./voxel_core" }
voxel_engine = { path = "./voxel_engine" }
voxel_render = { path = "./voxel_render" }
